@@ -1,39 +1,0 @@
-#undef ENLIGHTENMENT_VERSION
-
-#undef HAVE_STDARGS
-
-#undef HAVE_LIBESD
-
-#undef HAVE_SM
-
-#undef ENLIGHTENMENT_MAJOR
-
-#undef ENLIGHTENMENT_MINOR
-
-#undef ENLIGHTENMENT_MICRO
-
-#undef AUTOUPGRADE
-
-#undef WITH_TARTY_WARP
-
-#undef WITH_ZOOM
-
-#undef ENABLE_NLS
-
-#undef HAVE_CATGETS
-
-#undef HAVE_GETTEXT
-
-#undef HAVE_LC_MESSAGES
-
-#undef HAVE_STPCPY
-
-#undef PACKAGE
-
-#undef HAS_XINERAMA
-
-#undef VERSION
-
-#undef ENABLE_EWMH
-#undef ENABLE_GNOME
-#undef ENABLE_KDE
